# idf

./: .clang-format  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CMakeLists.txt  main.cpp  tokens.proto  tokens_processed.proto
gui/: app.py  pyproject.toml
gui/templates/: index.html
scripts/: check_build.sh
src/: actions.h  cli.h  config.hpp  db_manager.hpp  dirtree.hpp  extensions.hpp  file_processor.hpp  gui.h  history.hpp  image_processor.hpp  index.h  lmdb_wrapper.hpp  parser.h  parser_queries.h  query_parser.h  reporter.hpp  search.h  sharding.hpp  simd_tok.h  token_types.hpp  tokenizer.hpp
